# Fude

./: .mcp.json  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md  SECURITY.md  release-plz.toml
.claude/: settings.json
.claude/agents/: public-api-surface-reviewer.md  sandbox-invariant-reviewer.md
.claude/hooks/: fmt-rust.sh
.claude/skills/new-fude-feature/: SKILL.md
.claude/skills/release-check/: SKILL.md
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml
.github/workflows/: ci.yml  release-plz.yml
docs/: ROADMAP.md  cookbook.md  frontend-bridge.md  sandbox.md
examples/: editor.rs  minimal.rs
examples/acp-chat/: README.md  main.rs
examples/cowrite/: README.md  main.rs
examples/ipc-hello/: README.md  main.rs
examples/pty-terminal/: README.md  main.rs
src/: acp.rs  acp_commands.rs  assets.rs  dialogs.rs  events.rs  fs.rs  lib.rs  pty.rs  sandbox.rs  settings.rs  shell.rs
tests/: fs_commands.rs  sandbox.rs
tests/common/: mod.rs
